--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="navigate_to_indices_button">go to Indices</string>
     <string name="navigate_to_portfolio_button">go to Portfolio</string>
     <string name="error_message_general">Something went wrong!</string>
+    <string name="no_data_message">No data available</string>
 </resources>
